--- a/src/components/layout/Footer.astro
+++ b/src/components/layout/Footer.astro
@@ -8,9 +8,9 @@ const year = new Date().getFullYear();
 	class="mt-auto flex w-full flex-col items-center justify-center gap-y-2 pb-4 pt-20 text-center align-top text-gray-500 sm:flex-row sm:justify-between sm:text-xs"
 >
 	<div class="me-0 sm:me-4">
-		Copyright &copy; {year}
-		<span class="ml-2" aria-label="rocket emoji">🚀</span>
-		Astro Cactus
+		developed with {year}
+		<span class="ml-2" aria-label="rocket emoji">❤️</span>
+		Bolivia
 	</div>
 	<nav
 		aria-label="More on this site"
