--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -10,7 +10,9 @@ const url = new URL(Astro.request.url);
 
 	document.addEventListener("DOMContentLoaded", () => {
 		const header = document.getElementById("main-header") as HTMLElement;
-		const toggleMenuButton = document.getElementById("toggle-navigation-menu") as HTMLButtonElement;
+		const toggleMenuButton = document.getElementById(
+			"toggle-navigation-menu"
+		) as HTMLButtonElement;
 		let menuOpen = false;
 
 		toggleMenuButton.addEventListener("click", () => {
@@ -48,7 +50,6 @@ const url = new URL(Astro.request.url);
 					fill="#53C68C"></path>
 				<path d="M45.334 240 0 213.334v120L45.334 360V240Z" fill="#B04304"></path>
 			</svg>
-			<span class="text-xl font-bold sm:text-2xl">Astro Cactus</span>
 		</a>
 		<nav
 			id="navigation-menu"
@@ -89,7 +90,8 @@ const url = new URL(Astro.request.url);
 			stroke-width="1.5"
 			stroke="currentColor"
 		>
-			<path stroke-linecap="round" stroke-linejoin="round" d="M3.75 9h16.5m-16.5 6.75h16.5"></path>
+			<path stroke-linecap="round" stroke-linejoin="round" d="M3.75 9h16.5m-16.5 6.75h16.5"
+			></path>
 		</svg>
 		<svg
 			id="cross-svg"
