--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,11 +12,10 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS);
 
 <PageLayout meta={{ title: "Home" }}>
 	<section>
-		<h1 class="title mb-6">Hello World!</h1>
+		<h1 class="title mb-6">Luis Fernando CS</h1>
 		<p class="mb-4">
-			Hi, I’m a theme for Astro, an example of how you can use this starter to create a personal
-			blog. If you want to know more about how you can customise me, add more posts, and make it
-			your own, click on one the github icon link below which will take you to my repo.
+			Student at Engineer - Microsoft Learn Student Ambassadors - Lead at Podcast MLSA
+			Latinoamerica, #JavaScript #React #UI/UX #Azure #Python
 		</p>
 		<SocialList />
 	</section>
