--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,96 +8,118 @@ import { sortMDByDate } from "@/utils";
 const MAX_POSTS = 10;
 const allPosts = await getCollection("post");
 const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS);
+
+const meta = {
+	title: "Luis Fernando CS",
+	description:
+		"Student at Engineer - Microsoft Learn Student Ambassadors - Lead at Podcast MLSA Latinoamerica, #JavaScript #React #UI/UX #Azure #Python",
+};
 ---
 
-<PageLayout meta={{ title: "Home" }}>
+<PageLayout meta={meta}>
 	<section>
-		<h1 class="title mb-6">Luis Fernando CS</h1>
-		<p class="mb-4">
-			Student at Engineer - Microsoft Learn Student Ambassadors - Lead at Podcast MLSA
-			Latinoamerica, #JavaScript #React #UI/UX #Azure #Python
-		</p>
+		<h1 class="title mb-2">{meta.title}</h1>
+		<div class="mb-4 flex items-center justify-between">
+			<p class="mr-8">
+				{meta.description}
+			</p>
+			<figure>
+				<img
+					class="w-48 rounded-lg"
+					src="public/profile.png"
+					alt="Oscar Barajas Tavares"
+					width="48"
+					height="48"
+				/>
+			</figure>
+		</div>
 		<SocialList />
-	</section>
-	<section aria-label="Blog post list" class="mt-16">
-		<h2 class="title mb-4 text-xl">Posts</h2>
-		<ul class="space-y-4 sm:space-y-2">
-			{
-				allPostsByDate.map((p) => (
-					<li class="flex flex-col gap-x-2 sm:flex-row">
-						<PostPreview post={p} />
-					</li>
-				))
-			}
-		</ul>
-	</section>
-	<section class="mt-16">
-		<h2 class="title mb-4 text-xl">Technologies</h2>
-		<ul class="space-y-4 sm:space-y-2">
-			<li>
-				<a
-					href="https://astro.build"
-					target="_blank"
-					rel="noopener noreferrer"
-					class="cactus-link inline-block"
-					>Astro
-				</a>:
-				<p class="inline-block sm:mt-2">Build fast websites, faster.</p>
-			</li>
-			<li>
-				<a
-					href="https://docs.astro.build/en/guides/integrations-guide/image/"
-					target="_blank"
-					rel="noopener noreferrer"
-					class="cactus-link inline-block"
-					>@astro/image
-				</a>:
-				<p class="inline-block sm:mt-2">
-					An Astro integration for optimising images in Astro projects.
-				</p>
-			</li>
-			<li>
-				<a
-					href="https://tailwindcss.com"
-					target="_blank"
-					rel="noopener noreferrer"
-					class="cactus-link inline-block"
-					>Tailwind CSS
-				</a>:
-				<p class="inline-block sm:mt-2">
-					Rapidly build modern websites without ever leaving your HTML.
-				</p>
-			</li>
-			<li>
-				<a
-					href="https://www.markdownguide.org/"
-					target="_blank"
-					rel="noopener noreferrer"
-					class="cactus-link inline-block"
-					>Markdown
-				</a>:
-				<p class="inline-block sm:mt-2">Simple and easy-to-use markup language.</p>
-			</li>
-			<li>
-				<a
-					href="https://mdxjs.com/"
-					target="_blank"
-					rel="noopener noreferrer"
-					class="cactus-link inline-block"
-					>MDX
-				</a>:
-				<p class="inline-block sm:mt-2">Markdown for the component era.</p>
-			</li>
-			<li>
-				<a
-					href="https://github.com/vercel/satori"
-					target="_blank"
-					rel="noopener noreferrer"
-					class="cactus-link inline-block"
-					>Satori
-				</a>:
-				<p class="inline-block sm:mt-2">Generating png Open Graph images for blog posts</p>
-			</li>
-		</ul>
+		<div class="flex items-center justify-center p-10">
+			<a href="ruta_a_tu_cv.pdf" download>
+				<button class="rounded bg-accent px-4 py-2 font-semibold text-black"> Donwload CV</button>
+			</a>
+		</div>
+
+		<section aria-label="Blog post list" class="mt-16">
+			<h2 class="title mb-4 text-xl">Posts</h2>
+			<ul class="space-y-4 sm:space-y-2">
+				{
+					allPostsByDate.map((p) => (
+						<li class="flex flex-col gap-x-2 sm:flex-row">
+							<PostPreview post={p} />
+						</li>
+					))
+				}
+			</ul>
+		</section>
+		<section class="mt-16">
+			<h2 class="title mb-4 text-xl">Technologies</h2>
+			<ul class="space-y-4 sm:space-y-2">
+				<li>
+					<a
+						href="https://astro.build"
+						target="_blank"
+						rel="noopener noreferrer"
+						class="cactus-link inline-block"
+						>Astro
+					</a>:
+					<p class="inline-block sm:mt-2">Build fast websites, faster.</p>
+				</li>
+				<li>
+					<a
+						href="https://docs.astro.build/en/guides/integrations-guide/image/"
+						target="_blank"
+						rel="noopener noreferrer"
+						class="cactus-link inline-block"
+						>@astro/image
+					</a>:
+					<p class="inline-block sm:mt-2">
+						An Astro integration for optimising images in Astro projects.
+					</p>
+				</li>
+				<li>
+					<a
+						href="https://tailwindcss.com"
+						target="_blank"
+						rel="noopener noreferrer"
+						class="cactus-link inline-block"
+						>Tailwind CSS
+					</a>:
+					<p class="inline-block sm:mt-2">
+						Rapidly build modern websites without ever leaving your HTML.
+					</p>
+				</li>
+				<li>
+					<a
+						href="https://www.markdownguide.org/"
+						target="_blank"
+						rel="noopener noreferrer"
+						class="cactus-link inline-block"
+						>Markdown
+					</a>:
+					<p class="inline-block sm:mt-2">Simple and easy-to-use markup language.</p>
+				</li>
+				<li>
+					<a
+						href="https://mdxjs.com/"
+						target="_blank"
+						rel="noopener noreferrer"
+						class="cactus-link inline-block"
+						>MDX
+					</a>:
+					<p class="inline-block sm:mt-2">Markdown for the component era.</p>
+				</li>
+				<li>
+					<a
+						href="https://github.com/vercel/satori"
+						target="_blank"
+						rel="noopener noreferrer"
+						class="cactus-link inline-block"
+						>Satori
+					</a>:
+					<p class="inline-block sm:mt-2">Generating png Open Graph images for blog posts</p>
+				</li>
+			</ul>
+		</section>
 	</section>
 </PageLayout>
