--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -27,7 +27,7 @@ const meta = {
 				<img
 					class="w-48 rounded-lg"
 					src="public/profile.png"
-					alt="Oscar Barajas Tavares"
+					alt="Fernando"
 					width="48"
 					height="48"
 				/>
