--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -35,11 +35,53 @@ const meta = {
 		</div>
 		<SocialList />
 		<div class="flex items-center justify-center p-10">
-			<a href="ruta_a_tu_cv.pdf" download>
-				<button class="rounded bg-accent px-4 py-2 font-semibold text-black"> Donwload CV</button>
+			<a href="public/cv.pdf" download>
+				<button class="rounded bg-accent px-4 py-2 font-semibold text-black">📃Donwload CV</button>
 			</a>
 		</div>
+		<h2 class="title mb-4 text-xl">Technologies</h2>
+		<section class="flex w-80 flex-wrap items-center justify-center gap-2 md:w-full">
+			<span class="card flex h-16 w-16 items-center justify-center rounded-md bg-black p-2"
+				><img src="/public/svg/reactIcon.svg" width="49" height="49" alt="react" /></span
+			>
+			<span class="card flex h-16 w-16 items-center justify-center rounded-md bg-black p-2"
+				><img src="/public/svg/javascriptIcon.svg" width="49" height="49" alt="javascript" /></span
+			>
+			<span class="card flex h-16 w-16 items-center justify-center rounded-md bg-black p-2"
+				><img src="/public/svg/nodeIcon.svg" width="49" height="49" alt="node" /></span
+			>
+			<span class="card flex h-16 w-16 items-center justify-center rounded-md bg-black p-2"
+				><img src="/public/svg/tailwindIcon.svg" width="49" height="49" alt="tailwind" /></span
+			>
+			<span class="card flex h-16 w-16 items-center justify-center rounded-md bg-white p-2"
+				><img src="/public/svg/astroIcon.svg" width="49" height="49" alt="tailwind" /></span
+			>
+			<span class="card flex h-16 w-16 items-center justify-center rounded-md bg-white p-2"
+				><img src="/public/svg/StorybookIcon.svg" width="49" height="49" alt="tailwind" /></span
+			>
 
+			<span class="card flex h-16 w-16 items-center justify-center rounded-md bg-black p-2"
+				><img src="/public/svg/figmaIcon.svg" width="29" height="29" alt="tailwind" /></span
+			>
+			<span class="card flex h-16 w-16 items-center justify-center rounded-md bg-black p-2"
+				><img src="/public/svg/GraphqlIcon.svg" width="49" height="49" alt="tailwind" /></span
+			>
+			<span class="card flex h-16 w-16 items-center justify-center rounded-md bg-black p-2"
+				><img src="/public/svg/firebaseIcon.svg" width="49" height="49" alt="tailwind" /></span
+			>
+			<span class="card flex h-16 w-16 items-center justify-center rounded-md bg-white p-2"
+				><img src="/public/svg/vercelIcon.svg" width="49" height="49" alt="tailwind" /></span
+			>
+			<span class="card flex h-16 w-16 items-center justify-center rounded-md bg-white p-2"
+				><img src="/public/svg/GitIcon.svg" width="49" height="49" alt="tailwind" /></span
+			>
+			<span class="card flex h-16 w-16 items-center justify-center rounded-md bg-white p-2"
+				><img src="/public/svg/NpmIcon.svg" width="49" height="49" alt="tailwind" /></span
+			>
+			<span class="card flex h-16 w-16 items-center justify-center rounded-md bg-black p-2"
+				><img src="/public/svg/ViteIcon.svg" width="49" height="49" alt="tailwind" /></span
+			>
+		</section>
 		<section aria-label="Blog post list" class="mt-16">
 			<h2 class="title mb-4 text-xl">Posts</h2>
 			<ul class="space-y-4 sm:space-y-2">
@@ -50,75 +92,6 @@ const meta = {
 						</li>
 					))
 				}
-			</ul>
-		</section>
-		<section class="mt-16">
-			<h2 class="title mb-4 text-xl">Technologies</h2>
-			<ul class="space-y-4 sm:space-y-2">
-				<li>
-					<a
-						href="https://astro.build"
-						target="_blank"
-						rel="noopener noreferrer"
-						class="cactus-link inline-block"
-						>Astro
-					</a>:
-					<p class="inline-block sm:mt-2">Build fast websites, faster.</p>
-				</li>
-				<li>
-					<a
-						href="https://docs.astro.build/en/guides/integrations-guide/image/"
-						target="_blank"
-						rel="noopener noreferrer"
-						class="cactus-link inline-block"
-						>@astro/image
-					</a>:
-					<p class="inline-block sm:mt-2">
-						An Astro integration for optimising images in Astro projects.
-					</p>
-				</li>
-				<li>
-					<a
-						href="https://tailwindcss.com"
-						target="_blank"
-						rel="noopener noreferrer"
-						class="cactus-link inline-block"
-						>Tailwind CSS
-					</a>:
-					<p class="inline-block sm:mt-2">
-						Rapidly build modern websites without ever leaving your HTML.
-					</p>
-				</li>
-				<li>
-					<a
-						href="https://www.markdownguide.org/"
-						target="_blank"
-						rel="noopener noreferrer"
-						class="cactus-link inline-block"
-						>Markdown
-					</a>:
-					<p class="inline-block sm:mt-2">Simple and easy-to-use markup language.</p>
-				</li>
-				<li>
-					<a
-						href="https://mdxjs.com/"
-						target="_blank"
-						rel="noopener noreferrer"
-						class="cactus-link inline-block"
-						>MDX
-					</a>:
-					<p class="inline-block sm:mt-2">Markdown for the component era.</p>
-				</li>
-				<li>
-					<a
-						href="https://github.com/vercel/satori"
-						target="_blank"
-						rel="noopener noreferrer"
-						class="cactus-link inline-block"
-						>Satori
-					</a>:
-					<p class="inline-block sm:mt-2">Generating png Open Graph images for blog posts</p>
-				</li>
 			</ul>
 		</section>
 	</section>
